--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -5,14 +5,14 @@
 <div class="content">
 
   <h1>Help us deliver the independent journalism the world needs</h1>
-  <p>Make a monthly commitment to support The Guardian long term or a one-off contribution as and when you feel like it. Choose the option that suits you best.</p>
+  <p class="blurb">Make a monthly commitment to support The Guardian long term or a one-off contribution as and when you feel like it. Choose the option that suits you best.</p>
 
   <form action="#" class="form contribution-form">
-    <fieldset class="form__radio-group form__radio-group--tabs">
+    <fieldset class="contribution-form__type form__radio-group form__radio-group--tabs">
       <legend>Recurrence</legend>
       <ul>
         <li>
-          <input id="contributionType-monthly" type="radio" name="contributionType" value="monthly">
+          <input id="contributionType-monthly" type="radio" name="contributionType" value="monthly" checked>
           <label for="contributionType-monthly">Monthly</label>
         </li>
         <li>
@@ -22,11 +22,11 @@
       </ul>
     </fieldset>
 
-    <fieldset class="form__radio-group form__radio-group--pills">
+    <fieldset class="contribution-form__amount form__radio-group form__radio-group--pills">
       <legend>Amount</legend>
       <ul>
         <li>
-          <input id="contributionAmount-25" type="radio" name="contributionAmount" value="25">
+          <input id="contributionAmount-25" type="radio" name="contributionAmount" value="25" checked>
           <label for="contributionAmount-25" aria-label="25 US Dollars">$25</label>
         </li>
         <li>
@@ -47,42 +47,45 @@
         </li>
       </ul>
     
-      <div class="form__field">
+      <div class="contribution-form__other-amount form__field">
         <label for="contributionOther">Other Amount</label>
-        <input id="contributionOther" type="text" pattern="[1-9]\d*(.\d{2})?">
+        <input class="form__input" id="contributionOther" type="text" pattern="[1-9]\d*(.\d{2})?">
       </div>
     </fieldset>
 
-    <div class="form__field">
+    <div class="contribution-form__fname form__field">
       <label for="contributionFName">First Name</label>
-      <input id="contributionFName" type="text" required>
+      <input class="form__input" id="contributionFName" type="text" placeholder="First Name" required>
     </div>
 
-    <div class="form__field">
+    <div class="contribution-form__lname form__field">
       <label for="contributionLName">Last Name</label>
-      <input id="contributionLName" type="text" required>
+      <input class="form__input" id="contributionLName" type="text" placeholder="Last Name" required>
     </div>
 
-    <div class="form__field">
+    <div class="contribution-form__email form__field">
       <label for="contributionEmail">Email address</label>
-      <input id="contributionEmail" type="email" required>
+      <input class="form__input" id="contributionEmail" type="email" placeholder="example@@domain.com" required>
     </div>
-
-    <div class="form__field">
-      <label for="contributionState">Select your state</label>
-      <select id="contributionState" required>
+    
+    <div class="contribution-form__state form__field">
+      <label for="contributionState">State</label>
+      <select id="contributionState" placeholder="State" required>
         <option></option>
         <option value="al">AL (Alabama)</option>
         <option value="wy">WY (Wyoming)</option>
       </select>
+      <div class="form__input">
+        <span class="form__placeholder">State</span>
+      </div>
     </div>
 
-    <fieldset class="form__radio-group">
+    <fieldset class="contribution-form__pay form__radio-group form__radio-group--buttons">
       <legend>Pay with</legend>
 
       <ul>
         <li>
-          <input id="contributionPayment-paypal" name="contributionPayment" type="radio" value="paypal">
+          <input id="contributionPayment-paypal" name="contributionPayment" type="radio" value="paypal" checked>
           <label for="contributionPayment-paypal">Paypal</label>
         </li>
         <li>
