Add validation error markup

--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -58,7 +58,10 @@
 
   <div>
     <label for="contributionLName">Last Name</label>
-    <input id="contributionLName" type="text" required>
+    <input id="contributionLName" type="text" aria-describedby="err1" required>
+    <div id="err1">
+      Lovely surname there fella
+    </div>
   </div>
 
   <div>
