--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -47,7 +47,7 @@
   
     <div>
       <label for="contributionOther">Other Amount</label>
-      <input id="contributionOther" type="text" pattern="[1-9]\d*(.\d{2})?">
+      <input id="contributionOther" type="number" min="1" max="2000">
     </div>
   </fieldset>
 
