--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -10,7 +10,7 @@
     <legend>Recurrence</legend>
     <ul>
       <li>
-        <input id="contributionType-monthly" type="radio" name="contributionType" value="monthly">
+        <input id="contributionType-monthly" type="radio" name="contributionType" value="monthly" checked>
         <label for="contributionType-monthly">Monthly</label>
       </li>
       <li>
@@ -24,7 +24,7 @@
     <legend>Amount</legend>
     <ul>
       <li>
-        <input id="contributionAmount-25" type="radio" name="contributionAmount" value="25">
+        <input id="contributionAmount-25" type="radio" name="contributionAmount" value="25" checked>
         <label for="contributionAmount-25" aria-label="25 US Dollars">$25</label>
       </li>
       <li>
@@ -80,7 +80,7 @@
 
     <ul>
       <li>
-        <input id="contributionPayment-paypal" name="contributionPayment" type="radio" value="paypal">
+        <input id="contributionPayment-paypal" name="contributionPayment" type="radio" value="paypal" checked>
         <label for="contributionPayment-paypal">Paypal</label>
       </li>
       <li>
