--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -53,12 +53,12 @@
 
   <div>
     <label for="contributionFName">First Name</label>
-    <input id="contributionFName" type="text" required>
+    <input id="contributionFName" type="text" autocapitalize="words" required>
   </div>
 
   <div>
     <label for="contributionLName">Last Name</label>
-    <input id="contributionLName" type="text" required>
+    <input id="contributionLName" type="text" autocapitalize="words" required>
   </div>
 
   <div>
