--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -55,12 +55,12 @@
 
     <div class="contribution-form__fname form__field">
       <label for="contributionFName">First Name</label>
-      <input class="form__input" id="contributionFName" type="text" placeholder="First Name" required>
+      <input class="form__input" id="contributionFName" type="text" placeholder="First Name" autocapitalize="words" required>
     </div>
 
     <div class="contribution-form__lname form__field">
       <label for="contributionLName">Last Name</label>
-      <input class="form__input" id="contributionLName" type="text" placeholder="Last Name" required>
+      <input class="form__input" id="contributionLName" type="text" placeholder="Last Name" autocapitalize="words" required>
     </div>
 
     <div class="contribution-form__email form__field">
