Do not autocomplete amount

--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -49,7 +49,7 @@
     
       <div class="contribution-form__other-amount form__field">
         <label for="contributionOther">Other Amount</label>
-        <input class="form__input" id="contributionOther" type="number" min="1" max="2000">
+        <input class="form__input" id="contributionOther" type="number" min="1" max="2000" autocomplete="off">
       </div>
     </fieldset>
 
