--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -5,7 +5,7 @@
 <h1>Help us deliver the independent journalism the world needs</h1>
 <p>Make a monthly commitment to support The Guardian long term or a one-off contribution as and when you feel like it. Choose the option that suits you best.</p>
 
-<form action="#">
+<form action="#" method="post">
   <fieldset>
     <legend>Recurrence</legend>
     <ul>
