--- a/public/assets-new-ui/styles.css
+++ b/public/assets-new-ui/styles.css
@@ -21,6 +21,7 @@ header[role="banner"] {
 footer[role="contentinfo"] {
   background: #333;
   color: #999;
+  padding-bottom: 24px;
 }
 
 /* Support navigation */
@@ -28,6 +29,10 @@ footer[role="contentinfo"] {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.support li {
+  padding-top: 4px;
 }
 
 .support a {
@@ -61,7 +66,7 @@ header[role="banner"] {
 @media (min-width: 740px) {
   header[role="banner"],
   footer[role="contentinfo"] {
-    padding: 0 calc(50% - 350px);
+    padding: 0 calc(50% - 350px) 24px;
     width: 700px;
   }
   
@@ -94,7 +99,7 @@ header[role="banner"] {
   .support li {
     margin-left: -10px;
     padding-left: 10px;
-    border-left: 1px solid #dcdcdc;
+    border-left: 1px solid #999;
   }
 
 }
@@ -102,7 +107,7 @@ header[role="banner"] {
 @media (min-width: 1140px) {
   header[role="banner"],
   footer[role="contentinfo"] {
-    padding: 0 calc(50% - 550px) 0 calc(50% - 390px);
+    padding: 0 calc(50% - 550px) 24px calc(50% - 390px);
     width: 940px;
   }
 
@@ -124,7 +129,7 @@ header[role="banner"] {
 @media (min-width: 1300px) {
   header[role="banner"],
   footer[role="contentinfo"] {
-    padding: 0 calc(50% - 620px);
+    padding: 0 calc(50% - 620px) 24px;
     width: 1240px;
   }
   
@@ -165,7 +170,7 @@ header[role="banner"] {
     body,
     header[role="banner"],
     footer[role="contentinfo"] {
-      padding: 0;
+      padding: 0 0 24px;
       width: auto;
 
       grid-column-gap: 20px;
