Styling the SELECT elements

--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -87,14 +87,11 @@
     
     <div class="contribution-form__state form__field">
       <label for="contributionState">State</label>
-      <select id="contributionState" placeholder="State" required>
+      <select id="contributionState" class="form__input" placeholder="State" required>
         <option></option>
         <option value="al">AL (Alabama)</option>
         <option value="wy">WY (Wyoming)</option>
       </select>
-      <div class="form__input">
-        <span class="form__placeholder">State</span>
-      </div>
     </div>
 
     <fieldset class="contribution-form__pay form__radio-group form__radio-group--buttons">
