--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -52,14 +52,14 @@
   </fieldset>
 
   <div>
-    <label for="contributionFName">First Name</label>
-    <input id="contributionFName" type="text" required>
+    <label for="contributionFirstName">First Name</label>
+    <input id="contributionFirstName" type="text" required>
   </div>
 
   <div>
-    <label for="contributionLName">Last Name</label>
-    <input id="contributionLName" type="text" aria-describedby="err1" required>
-    <div id="err1">
+    <label for="contributionLastName">Last Name</label>
+    <input id="contributionLastName" type="text" aria-describedby="error-contributionLastName" required>
+    <div id="error-contributionLastName">
       Lovely surname there fella
     </div>
   </div>
