Add error styling

--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -60,8 +60,8 @@
 
     <div class="contribution-form__lname form__field">
       <label for="contributionLastName">Last Name</label>
-      <input class="form__input" id="contributionLastName" type="text" placeholder="Last Name" autocapitalize="words" aria-describedby="error-contributionLastName" required>
-      <div id="error-contributionLastName">
+      <input class="form__input form__input--primed" id="contributionLastName" type="text" placeholder="Last Name" autocapitalize="words" aria-describedby="error-contributionLastName" required>
+      <div id="error-contributionLastName" class="form__error">
           Lovely surname there fella
       </div>
     </div>
