--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -1,5 +1,17 @@
 <header role="banner">
   <a class="glogo" href="#"><img src="#" alt="The Guardian"></a>
+  <div class="countries">
+    <span>United Kingdom (£)</span>
+    <ul>
+      <li><span>United Kingdom (£)</span></li>
+      <li><a href="#">United States (US$)</a></li>
+      <li><a href="#">Europe (€)</a></li>
+      <li><a href="#">New Zealand (NZ$)</a></li>
+      <li><a href="#">Canada (CA$)</a></li>
+      <li><a href="#">International (US$)</a></li>
+      <li><a href="#">Australia (AU$)</a></li>
+    </ul>
+  </div>
 </header>
 
 <div class="content">
