--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -1,7 +1,7 @@
 <header role="banner">
   <a class="glogo" href="#"><img src="#" alt="The Guardian"></a>
-  <div class="countries">
-    <span>United Kingdom (£)</span>
+  <details class="countries">
+    <summary>United Kingdom (£)</summary>
     <ul>
       <li><span>United Kingdom (£)</span></li>
       <li><a href="#">United States (US$)</a></li>
@@ -11,7 +11,7 @@
       <li><a href="#">International (US$)</a></li>
       <li><a href="#">Australia (AU$)</a></li>
     </ul>
-  </div>
+  </details>
 </header>
 
 <div class="content">
