Style countries selector

--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -2,14 +2,14 @@
   <a class="glogo" href="#"><img src="#" alt="The Guardian"></a>
   <details class="countries">
     <summary>United Kingdom (£)</summary>
-    <ul>
-      <li><span>United Kingdom (£)</span></li>
-      <li><a href="#">United States (US$)</a></li>
-      <li><a href="#">Europe (€)</a></li>
-      <li><a href="#">New Zealand (NZ$)</a></li>
-      <li><a href="#">Canada (CA$)</a></li>
-      <li><a href="#">International (US$)</a></li>
-      <li><a href="#">Australia (AU$)</a></li>
+    <ul class="countries__list">
+      <li class="countries__item"><a href="#">United Kingdom (£)</a></li>
+      <li class="countries__item"><a href="#">United States (US$)</a></li>
+      <li class="countries__item"><a href="#">Europe (€)</a></li>
+      <li class="countries__item"><a href="#">New Zealand (NZ$)</a></li>
+      <li class="countries__item"><a href="#">Canada (CA$)</a></li>
+      <li class="countries__item"><a href="#">International (US$)</a></li>
+      <li class="countries__item"><a href="#">Australia (AU$)</a></li>
     </ul>
   </details>
 </header>
