--- a/public/assets-new-ui/styles.css
+++ b/public/assets-new-ui/styles.css
@@ -10,6 +10,8 @@ body {
 header[role="banner"] {
   background-color: #e9eff1;
   border-bottom: 1px solid #dcdcdc;
+  position: relative;
+  z-index: 1;
 }
 
 .glogo {
@@ -155,7 +157,7 @@ header[role="banner"] {
   }
 }
 
-/* @supports(display: grid) {
+@supports(display: grid) {
   body {
     display: grid;
     grid-template-rows: [header-t] 75px [header-b] 1fr [footer-t] auto [footer-b];
@@ -196,7 +198,7 @@ header[role="banner"] {
     }
 
     .countries {
-      grid-column: 2 / 3;
+      grid-column: 2 / 8;
       grid-row: 1;
     }
     
@@ -280,7 +282,7 @@ header[role="banner"] {
       grid-column: 5 / 9;
     }
   }
-} */
+}
 
 /*= TYPOGRAPHY */
 body {
@@ -311,6 +313,50 @@ button {
 
 footer[role="contentinfo"] {
   font-family: 'Guardian Text Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+}
+
+.countries {
+  background: white;
+  border: 1px solid #dcdcdc;
+  font-family: 'Guardian Text Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+  max-width: 355px;
+  padding: 0;
+  width: 100%;
+}
+
+.countries summary {
+  outline: none;
+  transition: box-shadow .2s ease-in-out;
+}
+
+.countries summary:hover,
+.countries summary:focus {
+  box-shadow: 0 0 0 3px #ffe500;
+}
+
+.countries summary::-webkit-details-marker {
+  display: none;
+}
+
+.countries__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.countries summary,
+.countries__item > a {
+  color: inherit;
+  display: block;
+  padding: 10px 40px 16px;
+  line-height: 1;
+  text-decoration: none;
+}
+
+.countries__item > a:hover,
+.countries__item > a:focus {
+  background: #ffe500;
+  font-weight: bold;
 }
 
 .license__txt {
@@ -439,7 +485,7 @@ form {
   border: 1px solid #dcdcdc;
   border-radius: 0;
   padding: 9px 10px 9px 38px;
-  transition: all .2s ease-in-out;
+  transition: box-shadow .2s ease-in-out;
 }
 
 .form__input:hover {
