--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -1,7 +1,7 @@
 <header role="banner">
   <a class="glogo" href="#"><img src="#" alt="The Guardian"></a>
   <details class="countries">
-    <summary>United Kingdom (£)</summary>
+    <summary aria-label="Selected country: United Kingdom (currency: British Pound)">United Kingdom (£)</summary>
     <ul class="countries__list">
       <li class="countries__item"><a href="#">United Kingdom (£)</a></li>
       <li class="countries__item"><a href="#">United States (US$)</a></li>
