--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -54,7 +54,7 @@
           <label for="contributionAmount-250" class="form__radio-group__label" aria-label="250 US Dollars">$250</label>
         </li>
         <li class="form__radio-group__item">
-          <input id="contributionAmount-other" type="radio" name="contributionAmount" value="other">
+          <input id="contributionAmount-other" class="form__radio-group__input" type="radio" name="contributionAmount" value="other">
           <label for="contributionAmount-other" class="form__radio-group__label">Other</label>
         </li>
       </ul>
