Add and position the roundel

--- a/app/views/newPaymentFlow.scala.html
+++ b/app/views/newPaymentFlow.scala.html
@@ -1,5 +1,5 @@
 <header role="banner">
-  <a class="glogo" href="#"><img src="#" alt="The Guardian"></a>
+  <a class="glogo" href="#"><img src="/assets-payment/roundel.svg" alt="The Guardian"></a>
   <div class="countries">
     <span>United Kingdom (£)</span>
     <ul>
