--- a/public/assets-new-ui/styles.css
+++ b/public/assets-new-ui/styles.css
@@ -26,6 +26,59 @@ header[role="banner"] {
   top: 24px;
 }
 
+.countries {
+  background: white;
+  border: 1px solid #dcdcdc;
+  font-family: 'Guardian Text Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+  max-width: 355px;
+  padding: 0;
+  width: 100%;
+}
+
+.countries summary {
+  align-items: center;
+  color: #999;
+  display: flex;
+  fill: currentColor;
+  height: 40px;
+  outline: none;
+  transition: box-shadow .2s ease-in-out, color .2s ease-in-out;
+}
+
+.countries .icon--world {
+  padding: 0 13px;
+}
+
+.countries summary:hover,
+.countries summary:focus {
+  box-shadow: 0 0 0 3px #ffe500;
+  color: inherit;
+}
+
+.countries summary::-webkit-details-marker {
+  display: none;
+}
+
+.countries__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.countries__item > a {
+  color: inherit;
+  display: block;
+  padding: 10px 40px 16px;
+  line-height: 1;
+  text-decoration: none;
+}
+
+.countries__item > a:hover,
+.countries__item > a:focus {
+  background: #ffe500;
+  font-weight: bold;
+}
+
 /*= FOOTER */
 
 footer[role="contentinfo"] {
@@ -322,54 +375,6 @@ footer[role="contentinfo"] {
   font-family: 'Guardian Text Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
 }
 
-.countries {
-  background: white;
-  border: 1px solid #dcdcdc;
-  font-family: 'Guardian Text Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
-  max-width: 355px;
-  padding: 0;
-  width: 100%;
-}
-
-.countries summary {
-  color: #999;
-  outline: none;
-  transition: box-shadow .2s ease-in-out, color .2s ease-in-out;
-}
-
-.countries summary:hover,
-.countries summary:focus {
-  box-shadow: 0 0 0 3px #ffe500;
-  color: inherit;
-}
-
-.countries summary::-webkit-details-marker {
-  display: none;
-}
-
-.countries__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.countries summary,
-.countries__item > a {
-  display: block;
-  padding: 10px 40px 16px;
-  line-height: 1;
-  text-decoration: none;
-}
-
-.countries__item > a {
-  color: inherit;
-}
-
-.countries__item > a:hover,
-.countries__item > a:focus {
-  background: #ffe500;
-  font-weight: bold;
-}
 
 .license__txt {
   font-size: inherit;
